PA2/parser.output
Grammar

    0 $accept: program $end

    1 program: expression

    2 expression: TOKEN_INT
    3           | TOKEN_STRING
    4           | TOKEN_IDENTIFIER
    5           | TOKEN_NIL
    6           | TOKEN_IF expression TOKEN_THEN expression TOKEN_ELSE expression
    7           | TOKEN_LET TOKEN_IDENTIFIER TOKEN_EQ expression TOKEN_IN expression
    8           | TOKEN_READINT
    9           | TOKEN_READSTRING
   10           | TOKEN_HD expression
   11           | TOKEN_TL expression
   12           | TOKEN_ISNIL expression
   13           | TOKEN_PRINT expression
   14           | expression TOKEN_PLUS expression
   15           | expression TOKEN_MINUS expression
   16           | expression TOKEN_TIMES expression
   17           | expression TOKEN_DIVIDE expression
   18           | expression TOKEN_EQ expression
   19           | expression TOKEN_NEQ expression
   20           | expression TOKEN_GEQ expression
   21           | expression TOKEN_GT expression
   22           | expression TOKEN_LT expression
   23           | expression TOKEN_LEQ expression
   24           | expression TOKEN_AND expression
   25           | expression TOKEN_OR expression
   26           | expression TOKEN_CONS expression
   27           | TOKEN_LPAREN expression_application TOKEN_RPAREN
   28           | TOKEN_LPAREN expression TOKEN_RPAREN
   29           | TOKEN_LAMBDA Id_list TOKEN_DOT expression
   30           | TOKEN_FUN TOKEN_IDENTIFIER TOKEN_WITH Id_list TOKEN_EQ expression TOKEN_IN expression
   31           | TOKEN_ERROR

   32 Id_list: TOKEN_IDENTIFIER
   33        | Id_list TOKEN_COMMA TOKEN_IDENTIFIER

   34 expression_application: expression expression
   35                       | expression_application expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_READSTRING (258) 9
TOKEN_READINT (259) 8
TOKEN_PRINT (260) 13
TOKEN_ISNIL (261) 12
TOKEN_HD (262) 10
TOKEN_TL (263) 11
TOKEN_CONS (264) 26
TOKEN_NIL (265) 5
TOKEN_DOT (266) 29
TOKEN_WITH (267) 30
TOKEN_LET (268) 7
TOKEN_PLUS (269) 14
TOKEN_MINUS (270) 15
TOKEN_IDENTIFIER (271) 4 7 30 32 33
TOKEN_TIMES (272) 16
TOKEN_DIVIDE (273) 17
TOKEN_INT (274) 2
TOKEN_LPAREN (275) 27 28
TOKEN_RPAREN (276) 27 28
TOKEN_AND (277) 24
TOKEN_OR (278) 25
TOKEN_EQ (279) 7 18 30
TOKEN_NEQ (280) 19
TOKEN_GT (281) 21
TOKEN_GEQ (282) 20
TOKEN_LT (283) 22
TOKEN_LEQ (284) 23
TOKEN_IF (285) 6
TOKEN_THEN (286) 6
TOKEN_ELSE (287) 6
TOKEN_LAMBDA (288) 29
TOKEN_FUN (289) 30
TOKEN_COMMA (290) 33
TOKEN_STRING (291) 3
TOKEN_ERROR (292) 31
TOKEN_IN (293) 7 30
EXPR (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
expression (42)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31, on right: 1 6 7 10 11 12 13 14 15 16
    17 18 19 20 21 22 23 24 25 26 28 29 30 34 35
Id_list (43)
    on left: 32 33, on right: 29 30 33
expression_application (44)
    on left: 34 35, on right: 27 35


state 0

    0 $accept: . program $end

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    program     go to state 17
    expression  go to state 18


state 1

    9 expression: TOKEN_READSTRING .

    $default  reduce using rule 9 (expression)


state 2

    8 expression: TOKEN_READINT .

    $default  reduce using rule 8 (expression)


state 3

   13 expression: TOKEN_PRINT . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 19


state 4

   12 expression: TOKEN_ISNIL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 20


state 5

   10 expression: TOKEN_HD . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 21


state 6

   11 expression: TOKEN_TL . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 22


state 7

    5 expression: TOKEN_NIL .

    $default  reduce using rule 5 (expression)


state 8

    7 expression: TOKEN_LET . TOKEN_IDENTIFIER TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 23


state 9

    4 expression: TOKEN_IDENTIFIER .

    $default  reduce using rule 4 (expression)


state 10

    2 expression: TOKEN_INT .

    $default  reduce using rule 2 (expression)


state 11

   27 expression: TOKEN_LPAREN . expression_application TOKEN_RPAREN
   28           | TOKEN_LPAREN . expression TOKEN_RPAREN

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression              go to state 24
    expression_application  go to state 25


state 12

    6 expression: TOKEN_IF . expression TOKEN_THEN expression TOKEN_ELSE expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 26


state 13

   29 expression: TOKEN_LAMBDA . Id_list TOKEN_DOT expression

    TOKEN_IDENTIFIER  shift, and go to state 27

    Id_list  go to state 28


state 14

   30 expression: TOKEN_FUN . TOKEN_IDENTIFIER TOKEN_WITH Id_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_IDENTIFIER  shift, and go to state 29


state 15

    3 expression: TOKEN_STRING .

    $default  reduce using rule 3 (expression)


state 16

   31 expression: TOKEN_ERROR .

    $default  reduce using rule 31 (expression)


state 17

    0 $accept: program . $end

    $end  shift, and go to state 30


state 18

    1 program: expression .
   14 expression: expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43

    $default  reduce using rule 1 (program)


state 19

   13 expression: TOKEN_PRINT expression .
   14           | expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43

    $default  reduce using rule 13 (expression)


state 20

   12 expression: TOKEN_ISNIL expression .
   14           | expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS  shift, and go to state 31

    $default  reduce using rule 12 (expression)


state 21

   10 expression: TOKEN_HD expression .
   14           | expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    $default  reduce using rule 10 (expression)


state 22

   11 expression: TOKEN_TL expression .
   14           | expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    $default  reduce using rule 11 (expression)


state 23

    7 expression: TOKEN_LET TOKEN_IDENTIFIER . TOKEN_EQ expression TOKEN_IN expression

    TOKEN_EQ  shift, and go to state 44


state 24

   14 expression: expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression
   28           | TOKEN_LPAREN expression . TOKEN_RPAREN
   34 expression_application: expression . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_CONS        shift, and go to state 31
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_PLUS        shift, and go to state 32
    TOKEN_MINUS       shift, and go to state 33
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_TIMES       shift, and go to state 34
    TOKEN_DIVIDE      shift, and go to state 35
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 45
    TOKEN_AND         shift, and go to state 36
    TOKEN_OR          shift, and go to state 37
    TOKEN_EQ          shift, and go to state 38
    TOKEN_NEQ         shift, and go to state 39
    TOKEN_GT          shift, and go to state 40
    TOKEN_GEQ         shift, and go to state 41
    TOKEN_LT          shift, and go to state 42
    TOKEN_LEQ         shift, and go to state 43
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 46


state 25

   27 expression: TOKEN_LPAREN expression_application . TOKEN_RPAREN
   35 expression_application: expression_application . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_RPAREN      shift, and go to state 47
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 48


state 26

    6 expression: TOKEN_IF expression . TOKEN_THEN expression TOKEN_ELSE expression
   14           | expression . TOKEN_PLUS expression
   15           | expression . TOKEN_MINUS expression
   16           | expression . TOKEN_TIMES expression
   17           | expression . TOKEN_DIVIDE expression
   18           | expression . TOKEN_EQ expression
   19           | expression . TOKEN_NEQ expression
   20           | expression . TOKEN_GEQ expression
   21           | expression . TOKEN_GT expression
   22           | expression . TOKEN_LT expression
   23           | expression . TOKEN_LEQ expression
   24           | expression . TOKEN_AND expression
   25           | expression . TOKEN_OR expression
   26           | expression . TOKEN_CONS expression

    TOKEN_CONS    shift, and go to state 31
    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_TIMES   shift, and go to state 34
    TOKEN_DIVIDE  shift, and go to state 35
    TOKEN_AND     shift, and go to state 36
    TOKEN_OR      shift, and go to state 37
    TOKEN_EQ      shift, and go to state 38
    TOKEN_NEQ     shift, and go to state 39
    TOKEN_GT      shift, and go to state 40
    TOKEN_GEQ     shift, and go to state 41
    TOKEN_LT      shift, and go to state 42
    TOKEN_LEQ     shift, and go to state 43
    TOKEN_THEN    shift, and go to state 49


state 27

   32 Id_list: TOKEN_IDENTIFIER .

    $default  reduce using rule 32 (Id_list)


state 28

   29 expression: TOKEN_LAMBDA Id_list . TOKEN_DOT expression
   33 Id_list: Id_list . TOKEN_COMMA TOKEN_IDENTIFIER

    TOKEN_DOT    shift, and go to state 50
    TOKEN_COMMA  shift, and go to state 51


state 29

   30 expression: TOKEN_FUN TOKEN_IDENTIFIER . TOKEN_WITH Id_list TOKEN_EQ expression TOKEN_IN expression

    TOKEN_WITH  shift, and go to state 52


state 30

    0 $accept: program $end .

    $default  accept


state 31

   26 expression: expression TOKEN_CONS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 53


state 32

   14 expression: expression TOKEN_PLUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 54


state 33

   15 expression: expression TOKEN_MINUS . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 55


state 34

   16 expression: expression TOKEN_TIMES . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 56


state 35

   17 expression: expression TOKEN_DIVIDE . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 57


state 36

   24 expression: expression TOKEN_AND . expression

    TOKEN_READSTRING  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 2
    TOKEN_PRINT       shift, and go to state 3
    TOKEN_ISNIL       shift, and go to state 4
    TOKEN_HD          shift, and go to state 5
    TOKEN_TL          shift, and go to state 6
    TOKEN_NIL         shift, and go to state 7
    TOKEN_LET         shift, and go to state 8
    TOKEN_IDENTIFIER  shift, and go to state 9
    TOKEN_INT         shift, and go to state 10
    TOKEN_LPAREN      shift, and go to state 11
    TOKEN_IF          shift, and go to state 12
    TOKEN_LAMBDA      shift, and go to state 13
    TOKEN_FUN         shift, and go to state 14
    TOKEN_STRING      shift, and go to state 15
    TOKEN_ERROR       shift, and go to state 16

    expression  go to state 58


state 37

   25 expression: expression TOKEN_OR . expression
